--- a/estilo.css
+++ b/estilo.css
@@ -11,7 +11,7 @@
 
 
 body {
-  background: #fff;
+  background: white;
 }
 
 .hidden{
@@ -84,7 +84,6 @@ header {
   margin: 20px;
 }
 
-
 aside {
   
   opacity: 0.98;
@@ -122,7 +121,6 @@ aside {
 .material-symbols-outlined{
   padding: 5px;
 }
-
 
 .aside-bottom {
   margin-bottom: 20px;
@@ -210,4 +208,56 @@ main::-webkit-scrollbar{
   width: 40px;
   height: 40px;
   border-radius: 50%;
+}
+
+body.dark-mode {
+  background: #121212;
+  color: #f5f5f5;
+}
+
+body.dark-mode header {
+  background: #333;
+  color: #f5f5f5;
+}
+
+body.dark-mode .search-bar {
+  background-color: #222;
+}
+
+body.dark-mode .search-bar input {
+  background-color: #222;
+  color: #f5f5f5;
+}
+
+body.dark-mode .search-bar button {
+  background-color: #222;
+  color: #f5f5f5;
+}
+
+body.dark-mode aside {
+  background: #333;
+}
+
+body.dark-mode .aside-item {
+  color: #f5f5f5;
+}
+
+body.dark-mode .aside-item:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+body.dark-mode main {
+  background: #121212;
+}
+
+body.dark-mode .title {
+  color: #f5f5f5;
+}
+
+body.dark-mode .chef-nickname {
+  color: #ccc;
+}
+
+body.dark-mode .sobre-nos{
+  color:#ccc ;
 }
