--- a/estilo.css
+++ b/estilo.css
@@ -9,7 +9,7 @@
 }
 
 body {
-  background: white;
+  background: #f5f5f5;
   overflow: hidden;
 }
 
@@ -201,6 +201,7 @@ main::-webkit-scrollbar {
   display: flex;
   flex-direction: column;
   align-items: start;
+  margin-left: 10px;
 }
 .title {
   margin-top: 9px;
