--- a/estilo.css
+++ b/estilo.css
@@ -1,216 +1,59 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
-
-* {
-  margin: 0;
-  padding: 0;
-  font-family: "Roboto", sans-serif;
-  user-select: none;
-  text-decoration: none;
-}
-
-body {
-  background: #f5f5f5;
-  overflow: hidden;
-}
-
-.hidden {
-  display: none;
-}
-
-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background: #a80000;
-  color: #fff;
-  padding: 20px 40px;
-  border-radius: 40px;
-  margin: 20px;
-}
-
-.hover {
-  border-radius: 10px;
-  padding: 5px;
-}
-
-.hover:hover {
-  background-color: rgba(255, 255, 255, 0.4);
-}
-
-.utilities {
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-}
-
-.menu {
-  font-size: large;
-}
-
-.search-bar {
-  display: flex;
-  padding: 10px 12px;
-  background-color: #fff;
-  border-radius: 30px;
-}
-
-.search-bar input {
-  padding-left: 13px;
-  font-size: 17px;
-  width: 50vw;
-  border: none;
-  outline: none;
-}
-
-.search-bar input::placeholder {
-  font-family: sans-serif;
-  font-size: 17px;
-}
-
-.search-bar button {
-  background: #fff;
-  border: none;
-  cursor: pointer;
-}
-
-.header-conteiner {
-  color: #fff;
-  padding: 5px;
-  display: flex;
-  align-items: center;
-  border-radius: 10px;
-}
-
-.container {
-  display: flex;
-  margin: 20px;
-}
-
-aside {
-  opacity: 0.98;
-  background: #a80000;
-  width: 180px;
-  border-radius: 40px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 30px 0;
-  margin: 0 20px;
-  justify-content: space-between;
-  height: calc(100vh - 220px);
-}
-
-#aside {
-  overflow-y: scroll;
-}
-
-#aside::-webkit-scrollbar {
-  display: none;
-}
-
-.aside-item {
-  color: #fff;
-  display: flex;
-  text-align: center;
-  margin: 20px 0;
-  padding: 17px 20px;
-  border-radius: 10px;
-}
-
-.aside-item:hover {
-  background-color: rgba(255, 255, 255, 0.4);
-}
-
-.aside-conteiner {
-  font-size: 15px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.material-symbols-outlined {
-  padding: 5px;
-}
-
-.aside-bottom {
-  margin-bottom: 20px;
-  font-weight: bold;
-}
-
-.aside-item {
-  text-align: center;
-  margin: 20px 0;
-  display: block;
-}
-
-.aside-bottom {
-  margin-bottom: 20px;
-  font-weight: bold;
-  display: block;
-  text-align: center;
-}
-
-.aside-bottom:hover {
-  text-decoration: underline;
-}
 main {
-  height: calc(100vh - 140px);
-  margin-left: 30px;
+  height: calc(100vh - 127px);
   overflow-y: scroll;
   display: grid;
-  justify-content: center;
-  align-items: center;
   grid-template-columns: repeat(3, 1fr);
-  gap: 20px;
+  justify-items: center;
   flex: 1;
   scroll-behavior: smooth;
-  align-self: flex-start;
+  width: 100vw;
 }
 
 main::-webkit-scrollbar {
   display: none;
 }
 
+.minicard {
+  width: 25.5vw !important;
+}
+
 .card {
   display: flex;
   flex-direction: column;
-  height: 250px;
-  margin: 10px 0;
-  border-radius: 25px 25px 20px 20px;
+  border-radius: 20px 20px 15px 15px;
+  width: 30vw;
+  padding: 10px 15px;
+  margin-bottom: 2px;
 }
 
 .card:hover {
-  border: #a80000;
+  background-color: #dcdcdc;
 }
 
 .card-image {
+  aspect-ratio: 16 / 9;
   display: flex;
-  align-self: center;
-  width: 90%;
-  height: 90%;
+  width: 100%;
   border-radius: 13px;
 }
 
 .produtor {
   display: flex;
-  align-items: center;
-  margin-left: 25px;
+  margin-top: 10px;
+  height: 70px;
 }
 
 .produtor-info {
   display: flex;
   flex-direction: column;
-  align-items: start;
   margin-left: 10px;
 }
+
 .title {
-  margin-top: 9px;
-  font-size: 25px;
   color: #a80000;
 }
 
 .chef-nickname {
-  font-size: 13px;
   color: #640000;
 }
 
@@ -220,61 +63,45 @@ main::-webkit-scrollbar {
   border-radius: 50%;
 }
 
-body.dark-mode {
-  background: #1e1e27;
-  color: #f5f5f5;
-}
-
-body.dark-mode header {
-  background: #df0139;
-  color: #f5f5f5;
-}
-
-body.dark-mode .search-bar input {
-  background-color: #f5f5f5;
-  color: #f5f5f5;
-}
-
-body.dark-mode .search-bar {
-  background-color: #f5f5f5;
-  color: #f5f5f5;
-}
-
-body.dark-mode button {
-  background: none;
-}
-
-body.dark-mode #aside {
-  background-color: #df0139;
-}
-
-body.dark-mode .search-bar button {
-  background: none;
-}
-
-body.dark-mode aside {
-  background: #333;
-}
-
-body.dark-mode .aside-item {
-  color: #f5f5f5;
-}
-
-body.dark-mode .aside-item:hover {
+body.dark-mode .card:hover {
   background-color: rgba(255, 255, 255, 0.1);
 }
 
-body.dark-mode main {
-  background: #1e1e27;
+/* responsivity */
+
+@media (max-width: 1200px) {
+  aside {
+    position: fixed;
+  }
+
+  .minicard {
+    width: 30vw !important;
+  }
 }
 
-body.dark-mode .title {
-  color: #f5f5f5;
+@media (max-width: 1000px) {
+  main {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .card {
+    width: 46vw;
+  }
+
+  .minicard {
+    width: 46vw !important;
+  }
 }
 
-body.dark-mode .chef-nickname {
-  color: #ccc;
-}
-body.dark-mode .sobre-nos {
-  color: #ccc;
+@media (max-width: 700px) {
+  main {
+    grid-template-columns: 1fr;
+  }
+  .card {
+    padding: 0;
+    width: 90vw;
+  }
+  .minicard{
+    width: 90vw !important;
+  }
 }
